修改新的部署文档